[package]
name = "rust-secret"
version = "0.1.0"
edition = "2024"

[dependencies]
# image = { version = "0.25.6" }
clap = { version = "4.5.40", features = ["derive"] }
# colored = { version = "3.0.0" }
# reed-solomon-erasure = { version = "6.0.0" }
jpeg-decoder = { version = "0.3.2" }
jpeg-encoder = { version = "0.6.1" }
